2005-08-11  Not Zed  <NotZed@Ximian.com>

	** See #232499.

	* mail-folder-cache.c (rename_folders): rename view meta-data
	along with the folder.

2005-08-11  Vivek Jain <jvivek@novell.com>
	
	* em-folder-tree-model.c: (account_changed)
	check if the account is enabled, before adding the store
	** Fixes #313057
	
2005-08-11  Parthasarathi Susarla <sparthasarathi@novell.com>

	* em-folder-view.c
	(emfv_enable_menus): return the target in any case.
	It will be an empty target and not NULL.
	Fixes bug ** 312420

2005-08-11  Srinivasa Ragavan <sragavan@novell.com>

	* em-format-html-display.c (efhd_attachment_bar_refresh) (efhd_bar_resize)
	(efhd_add_bar): Fix to hide the attachment bar when no attachments and to 
	resize when the window is resized.

2005-08-10  Not Zed  <NotZed@Ximian.com>

	** See #271985.

	* mail-config.c (mail_config_write_on_exit) 
	(mail_config_get_account_by_source_url) 
	(mail_config_get_account_by_transport_url) 
	(mail_config_get_default_transport): 

	* mail-component.c (load_accounts): check url for content before
	using it.

2005-08-09  Not Zed  <NotZed@Ximian.com>

	** See #312715.

	* em-folder-tree.c (emft_drop_folder_rec): removed.
	(emft_drop_folder): call em_folder_utils_copy_folders to perform
	the operation rather than: doing it sync when it shouldn't be, and
	2; copying code redundantly.

	* em-folder-utils.c (em_folder_utils_move_folder): remove this
	redundant api.
	(em_folder_utils_copy_folder): add delete flag.
	(em_folder_utils_copy_folders): export this function.  fix strange
	argument order.

2005-08-10  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Link with all needed libraries. Use -no-undefined
	on Win32. Work around annoying MSYS feature on Win32 when
	installing the schemas: Echo the command to a temporary .bat file
	and run it with cmd.exe...

	* importers/Makefile.am: Use the bootstrap import library for
	libevolution-mail.la on Win32 as libevolution-mail.la hasn't been